# clod

./: .gitignore  LICENSE  README.md  build.bat  build.py  build.sh  cam-gui.spec  demo_vpn_team.py  pyproject.toml  requirements-team.txt  run_dashboard.bat  test_hello_world.py  test_synthetic.py  test_team.py
.clod/: memory.db
dashboard/: package.json
dashboard/src/components/: AgentPlanning.tsx  AgentRolesList.tsx  ReasoningViewer.tsx  TeamAgentConfig.tsx  TeamBuilder.tsx  TeamCustomization.tsx  TeamMode.tsx
docs/: MASTER_SUMMARY.md  PRACTICAL_REASONING_GUIDE.md  ROLES_SPECIFICATION.md  TEAM_AGENT_CUSTOMIZATION_PLAN.md  TEAM_AGENT_CUSTOMIZATION_VISUAL.md  TEAM_MODE.md
src/.claude-team/: shared_context.json
src/claude_agent_manager/: advanced_reasoning.py  agent_config.py  claude_mem_setup.py  claude_mem_test.py  cli.py  config.py  crew.py  custom_hotkeys.py  gui.py  hotkeys.py  ideation.py  llm_client.py  manager.py  memory_diagnostics.py  memory_graph.py  memory_mcp.py  memory_tools.py  monitoring.py  overlay.py  planning.py  processes.py  registry.py  settings.py  sharing.py  sharing_cli.py  simple_dashboard.py  subagent_mcp.py  subagents.py  task_logger.py  team_cli.py  team_cli_extended.py  team_templates.py  tile.py  updater.py  usage_stats.py  validation.py  viewer.html  windows.py  worker.py  worktree_manager.py  (+1 more)
tests/: __init__.py  conftest.py  test_conflict_resolver.py  test_context_analyzer.py  test_dashboard.py  test_graph_memory.py  test_kanban.py  test_metrics.py  test_task_logger.py  test_validation.py  test_web.py  test_worktree_manager.py
(+51 files in other folders)
